--- a/01.Pre-Bootcamp/04.AirplaneII/style.css
+++ b/01.Pre-Bootcamp/04.AirplaneII/style.css
@@ -2,7 +2,7 @@
 	background-image: url("master/Space_2.jpg");
 	width: 900px;
 	height: 700px;
-    background-size: contain;
+    background-size:cover;
 }
 .player {
 	position: absolute;
@@ -16,5 +16,13 @@
 	width: 70px;
 	height: 75px;
 	background-image: url("master/enemy.png");
+	background-size: contain;
+}
+
+.missile{
+	position: absolute;
+	background-image: url("master/missile_1.png");
+	width: 10px;
+	height: 20px;
 	background-size: contain;
 }
