--- a/02.Fundamentos_De_La_Web/Asignaciones/CSS/04.Flex_Box_Model/style.css
+++ b/02.Fundamentos_De_La_Web/Asignaciones/CSS/04.Flex_Box_Model/style.css
@@ -1,43 +1,39 @@
-.container{
-    width: 950px;
-    background-color: silver;
-    margin: 0px auto;
-    padding: 25px;
-}
-
-.side-nav, .main{
-    display: inline-block;
-    vertical-align: top;
+.container {
+	width: 950px;
+	background-color: silver;
+	margin: 0px auto;
+	padding: 20px;
 }
 
 .top-nav {
-    height: 150px;
-    width: 945px;
-    background-color: green;
-    margin-bottom: 20px;
+	height: 150px;
+	background-color: green;
+	margin-bottom: 20px;
 }
 .side-nav {
-    height: 300px;
-    width: 200px;
-    background-color: blue;
+	height: 300px;
+	width: 200px;
+	background-color: blue;
+	margin-right: 20px;
 }
 .main {
-    padding: 10px;
-    margin-left: 20px;
-    height: 400px;
-    width: 700px;
-    background-color: red;
+	height: 400px;
+	width: 710px;
+	background-color: red;
+	padding: 10px;
 }
-.sub-content {    
-    margin: 15px;
-    height: 200px;
-    width: 200px;
-    background-color: yellow;
-    display: inline-block;
+.sub-content {
+	height: 200px;
+	width: 210px;
+	background-color: yellow;
+	margin: 10px;
 }
-#advertisement {    
-    margin: 10px;
-    height: 120px;
-    width: 670px;
-    background-color: purple;
+#advertisement {
+	margin: 10px;
+	height: 120px;
+	width: 670px;
+	background-color: purple;
+}
+.row {
+	display: flex; /* TODO - what should go here? */
 }
