--- a/02.Fundamentos_De_La_Web/Asignaciones/CSS/05.GitHub_Blocks/style.css
+++ b/02.Fundamentos_De_La_Web/Asignaciones/CSS/05.GitHub_Blocks/style.css
@@ -10,6 +10,11 @@ img.octocat {
     font-size: x-large;
 }
 
+p{
+    font-weight: 400;
+    font-size: medium;
+}
+
 .frow, .srow, .trow{
     display: flex;
     align-items: center;
