--- a/02.Fundamentos_De_La_Web/Asignaciones/CSS/09.Profile_Page/style.css
+++ b/02.Fundamentos_De_La_Web/Asignaciones/CSS/09.Profile_Page/style.css
@@ -1,113 +1,146 @@
 * {
 	padding: 0;
 	margin: 0;
-    font-family: Roboto;
-    /* font-weight: 400; */
-    /* color: aliceblue; */
+	font-family: Roboto;
 }
 
-.nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(73, 73, 73);
-    height: 50px;
-    font-size: small;
-}
-
-li, .nav-links{
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
-}
-
-h1{
-	font-size: x-large;
-	font-weight: normal;
-    margin-left: 20px;
-}
-
-button{
-    border: 1px solid black;
-    box-shadow: 2px 2px  black;    
-    background-color:darkcyan;
-}
-
-.gcontainer{
+.nav {
 	display: flex;
 	justify-content: space-evenly;
+	align-items: center;
+	background-color: rgb(32, 32, 32);
+	height: 50px;
+	font-size: small;
+	color: aliceblue;
 }
 
-.personal {
-	height: 280px;
+h1 {
+	font-size: x-large;
+	font-weight: normal;
+	margin: 10px 50px 10px 20px;
 }
 
-.education{
-	margin-top: 10px;
-	height: 300px;
+.nav-title {
+	display: flex;
+	align-items: center;
 }
 
-.connection{
-	height: 300px;
-	width: 300px;
-	border: 2px solid silver;
+li,
+.nav-links {
+	display: flex;
+	margin-left: 20px;
 }
 
-.personal,.education{	
-	width: 500px;
-	border: 2px solid silver;
+a[href="#"] {
+	font-size: medium;
+	color: aliceblue;
+	text-decoration: none;
 }
 
-.top {
+.active {
+	font-weight: bolder;
+}
+
+button {
+	min-height: 30px;
+	border: 1px solid black;
+	box-shadow: 2px 2px black;
 	background-color: darkcyan;
-	height: 60px;
+}
+
+.container {
 	display: flex;
 	justify-content: center;
-	align-items: center;
-	font-weight:600;
-    color: aliceblue;
 }
 
-.img-1 {
-	margin-top: -30px;
+.personal,
+.education,
+.connection {
+	border: 2px solid silver;
+	margin: 20px;
+}
+
+.top-1,
+.top-2 {
 	height: 60px;
-	width: 60px;
-	border: 2px solid white;
-	outline: 1px solid silver;
-	border-radius: 50%;
-	background-image: url("icons/user-circle.png");
-	background-size: contain;
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	font-weight: 600;
+	color: aliceblue;
+}
+
+.top-1 {
+	background-color: darkcyan;
+}
+
+.top-2 {
+	background-color: rgb(64, 64, 64);
+}
+
+.p-1,
+.p-2 {
+	margin: 10px 30px 10px 20px;
+}
+
+.p-2 {
+	width: 80px;
+}
+.bottom {
+	margin-top: 15px;
+	height: 50px;
+	border-top: 2px solid silver;
+	display: flex;
+	align-items: center;
 }
 
 .info {
-	margin-left: 25px;
 	display: flex;
 	align-items: center;
 	justify-content: start;
 }
 
+.img-1,
+.pimg {
+	border: 2px solid white;
+	outline: 1px solid silver;
+	border-radius: 50%;
+	background-size: contain;
+}
+
+.img-1 {
+	margin-left: 25px;
+	margin-top: -30px;
+	height: 60px;
+	width: 60px;
+}
+
+.pimg {
+	margin-left: 15px;
+	height: 30px;
+	width: 30px;
+}
+
+.icon {
+	height: 25px;
+	width: 25px;
+	margin-right: 15px;
+}
+
 .img-2,
 .img-3 {
 	background-size: contain;
-	margin: 5px;
+	margin-left: 15px;
 	width: 10px;
+	height: auto;
 }
 
-.img-2 {
-	background-image: url("icons/map-marker.png");
-	height: 15px;
-}
-
-.img-3 {
-	background-image: url("icons/gear.png");
-	height: 10px;
-}
-
-.number{
+.number {
 	background-color: azure;
 	color: grey;
+	border: 5px solid azure;
 	border-radius: 50%;
-	width: 20px;
 	height: 20px;
 	text-align: center;
+	margin-right: -10px;
 }
