--- a/02.Fundamentos_De_La_Web/03.JS/04.Profile_Page/style.css
+++ b/02.Fundamentos_De_La_Web/03.JS/04.Profile_Page/style.css
@@ -1,8 +1,12 @@
 * {
 	padding: 0;
 	margin: 0;
-	font-family: Roboto;
 	/* outline: 1px dashed red; */
+}
+
+#container{
+	
+	font-family: Roboto;
 }
 
 .nav {
@@ -33,7 +37,7 @@ li,
 	margin-left: 20px;
 }
 
-a[href="#"] {
+a[href="# 1"] {
 	font-size: medium;
 	color: aliceblue;
 	text-decoration: none;
@@ -145,4 +149,5 @@ button {
 	height: 20px;
 	text-align: center;
 	margin-right: -10px;
+	padding: 0 5px;
 }
